--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
           <h4 class="mb-5">Policz który wariant jest dla Ciebie korzystniejszy.</h4>
           </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <button type="submit" class="btn btn-block btn-lg btn-primary">Kalkulator</button>
+          <a class="btn btn-block btn-lg btn-primary" href="#call_to_action">Kalkulator</a>
         </div>
       </div>
     </div>
@@ -21,7 +21,7 @@
 {% block icons_grid %}
   <!-- Icons Grid -->
   <section class="features-icons bg-light text-center">
-    <div class="container">
+    <div  id="icons_grid" class="container">
       <div class="row">
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
@@ -58,7 +58,7 @@
 {% block image_showcases %}
   <!-- Image Showcases -->
   <section class="showcase">
-    <div class="container-fluid p-0">
+    <div id="showcase" class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/static/img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
@@ -105,7 +105,7 @@
 {% block call_to_action %}
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
-    <div class="overlay"></div>
+    <div id="call_to_action" class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
