--- a/templates/template.html
+++ b/templates/template.html
@@ -21,6 +21,12 @@
   <!-- Custom styles for this template -->
   <link href="/static/css/landing-page.min.css" rel="stylesheet">
 
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="/static/favicon_io//site.webmanifest">
+
 </head>
 
 <body>
