--- a/templates/wynik.html
+++ b/templates/wynik.html
@@ -24,7 +24,7 @@
 {% block testimonials %}
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
-    <div class="container">
+    <div  id="testimonials" class="container">
       <h2 class="mb-5">Czego się dowiedzialem w międzyczasie...</h2>
       <div class="row">
         <div class="col-lg-4">
