--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <h1 class="mb-5">Kapitał w OFE: przenieść do ZUS, czy do IKE?</h1>
-          <h4 class="mb-5">Policz który wariant jest dla Ciebie korzystniejszy.</h4>
+          <h4 class="mb-5">Zamiast zgadywać, policz który wariant jest dla Ciebie korzystniejszy.</h4>
           </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <a class="btn btn-block btn-lg btn-primary" href="#call_to_action">Kalkulator</a>
@@ -47,7 +47,7 @@
               <i class="icon-check m-auto text-primary"></i>
             </div>
             <h3>O mnie</h3>
-            <p class="lead mb-0">Nie lubię ślepo iść za tłumem. Napisałem ten kalkulator dla swoich rodziców, by podjęli lepszą dla nich decyzję. Używasz na własną odpowiedzialność, choć masz moje słowo, że dołożyłem wszelkich starań by rzetelnie oddać sytuację.</p>
+            <p class="lead mb-0">Nie lubię ślepo iść za tłumem. Napisałem ten kalkulator dla swoich rodziców, by podjęli lepszą dla siebie decyzję. Używasz na własną odpowiedzialność, choć masz moje słowo, że dołożyłem wszelkich starań by rzetelnie zobrazować sytuację.</p>
           </div>
         </div>
       </div>
@@ -86,12 +86,12 @@
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/static/img/bg-showcase-3.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Co jest brane pod uwagę przy obliczeniach</h2>
+
             <ul class="list-group list-group-flush">
               <li class="list-group-item">IKE: po osiągnięciu wieku emerytalnego wycofujemy pieniądze z IKE i trzymamy je w tej samej inwestycji płacąc podatek Belki</li>
               <li class="list-group-item">ZUS: dla bezpieczeństwa przyjęto, że przyszła stopa waloryzacji kapitału wyniesie 5.2% (średnia waloryzacja kapitału w ostatnich 19 latach wynosila 6.5%, a w ostatnich dwoch latach 8-9%)</li>
               <li class="list-group-item">Czas trwania życia brany jest z danych dostarczanych przez GUS - w oparciu o nie (i Twoją płeć) wyliczana jest liczba lat na emeryturze</li>
               <li class="list-group-item">Przy wyliczaniu podatku dochodowego brana jest pod uwagę kwota wolna od podatku oraz odliczenia</li>
-
             </ul>
         </div>
       </div>
