--- a/static/scss/_mixins.scss
+++ b/static/scss/_mixins.scss
@@ -9,5 +9,5 @@
 
 // Font Mixins
 @mixin body-font {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Aleo', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
