--- a/templates/template.html
+++ b/templates/template.html
@@ -16,7 +16,7 @@
   <!-- Custom fonts for this template -->
   <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="/static/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Aleo&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
   <link href="/static/css/landing-page.min.css" rel="stylesheet">
