--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
           <h4 class="mb-5">Zamiast zgadywać, policz który wariant jest dla Ciebie korzystniejszy.</h4>
           </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <a class="btn btn-block btn-lg btn-primary" href="#call_to_action">Kalkulator</a>
+          <a class="btn btn-block btn-lg btn-primary" href="#kalkulator">Kalkulator</a>
         </div>
       </div>
     </div>
@@ -102,10 +102,10 @@
 {% block testimonials %}
 {% endblock %}
 
-{% block call_to_action %}
+{% block kalkulator %}
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
-    <div id="call_to_action" class="overlay"></div>
+    <div id="kalkulator" class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
