--- a/templates/template.html
+++ b/templates/template.html
@@ -51,7 +51,7 @@
   {% block testimonials %}
   {% endblock %}
 
-  {% block call_to_action %}
+  {% block kalkulator %}
   {% endblock %}
 
   <!-- Footer -->
