--- a/templates/template.html
+++ b/templates/template.html
@@ -27,6 +27,16 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon_io/favicon-16x16.png">
   <link rel="manifest" href="/static/favicon_io//site.webmanifest">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155168927-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-155168927-1');
+  </script>
+
 </head>
 
 <body>
