--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
           <form method="POST" action="/wynik" id="wynik_form">
             <div class="form-row">
               <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <p>Jak myślisz, jaką stopę zwrotu będą miały Twoje oszczędności w IKE? [%]</p>
+                <p>Jak myślisz, jaką roczną stopę zwrotu będzie miała Twója potencjalna inwestycja w IKE? [%]</p>
                 <input type="number" name="r" min="-100" value="4" step="0.01" required><br><br>
 
                 <p>Przyjęta stopa inflacji w kolejnych latach [%]</p>
