--- a/templates/wynik.html
+++ b/templates/wynik.html
@@ -25,7 +25,7 @@
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
     <div  id="testimonials" class="container">
-      <h2 class="mb-5">Czego się dowiedzialem w międzyczasie...</h2>
+      <h2 class="mb-5">Czego się dowiedziałem w międzyczasie...</h2>
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
