--- a/templates/wynik.html
+++ b/templates/wynik.html
@@ -9,7 +9,7 @@
         <div class="col-xl-9 mx-auto">
           <h1 class="mb-5">Wyniki</h1>
           <h4 class="mb-5">O ile w sumie wzrośnie (na rękę, po uwzględnieniu inflacji) otrzymane do końca życia świadczenie (zakładając średnią długość trwania życia).</h4>
-          <p>Wybór IKE: <b>{{ sredni_dodatek_do_emerytury_ike }} PLN miesięcznie więcej do czasu wyczerpania środków</b></p>
+          <p>Wybór IKE: <b>{{ sredni_dodatek_do_emerytury_ike }} PLN miesięcznie więcej do czasu wyczerpania środków, lecz będą one dziedziczone</b></p>
           <p>Wybór ZUS: <b>{{ sredni_dodatek_do_emerytury_zus }} PLN miesięcznie więcej do końca życia</b></p>
           <p>Wybór <b>{{ rekomendacja_komentarz }}</b> zaowocuje o {{ rekomendacja_przewaga }}% wyższym dodatkiem do przyszłej emerytury</p>
         </div>
