--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Kapitał w OFE</h1>
-          <h2 class="mb-5">przenieść do ZUS, czy do IKE?</h2>
+          <h1 class="mb-5">Kapitał w OFE<br>przenieść do ZUS, czy do IKE?</h1>
           <h4 class="mb-5">Zamiast zgadywać, policz który wariant jest dla Ciebie korzystniejszy.</h4>
           </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
