--- a/templates/index.html
+++ b/templates/index.html
@@ -125,16 +125,19 @@
                 <input type="number" name="r_em" min="-100" value="2" step="0.01" required><br><br>
 
                 <p>Przyjęta stopa inflacji w kolejnych latach [%]</p>
-                <input type="number" name="inflacja" value="2.5" step="0.01" required><br><br>
+                <input type="number" name="inflacja" value="3.0" step="0.01" required><br><br>
 
                 <p>Prognozowana emerytura (brutto) (w dzisiejszych kwotach)</p>
                 <input type="number" name="prognozowana_emerytura_brutto" min="0" step="1.00" required><br><br>
 
-                <p>Suma aktywów w rejestrze OFE na 15 kwietnia 2019</p>
+                <p>Prognozowana stawka podatkowa w czasie emerytury [%]</p>
+                <input type="number" name="stawka_pit" value="17.00" min="0" max="99" step="1.00" required><br><br>
+
+                <p>Suma aktywów w rejestrze OFE</p> <!--na 15 kwietnia 2019-->
                 <input type="number" name="ofe" min="0" step="1.00" required><br><br>
 
-                <p>Zmiana wartości jednostki OFE, jaka dokonała się między 1 października 2020, a 15 kwietnia 2019 [%]</p>
-                <input type="number" name="zmiana_wartosci_jednostki_ofe" min=-100 value="-25" step="1" required><br><br>
+<!--                <p>Zmiana wartości jednostki OFE, jaka dokonała się między 1 października 2020, a 15 kwietnia 2019 [%]</p>-->
+<!--                <input type="number" name="zmiana_wartosci_jednostki_ofe" min=-100 value="0" step="1" required><br><br>-->
 
                 <p>Płeć</p>
                 <select name="kobieta" form="wynik_form">
